src/SupportApp/main/default/objects/Issue_Type__mdt/Issue_Type__mdt.object-meta.xml
<CustomObject>
    <description>Used to populate the &quot;Create an Issue&quot; menu in the utility bar</description>
    <label>Issue Type</label>
    <pluralLabel>Issue Types</pluralLabel>
</CustomObject>