src/SupportApp/main/default/objects/Issue_Type__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is This entry Active?</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>