src/SupportApp/main/default/objects/Issue_Type__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A short description of what this issue type is used for</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>