src/SupportApp/main/default/objects/Issue_Type__mdt/fields/Enable_RecordTypes__c.field-meta.xml
<CustomField>
    <fullName>Enable_RecordTypes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opens the standard Record Type selector if enabled</description>
    <label>Enable RecordTypes</label>
    <type>Checkbox</type>
</CustomField>