src/SupportApp/main/default/objects/Issue_Type__mdt/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <description>The name of the SLDS Icon displayed to represent this type of issue in the &quot;Create an Issue&quot; menu</description>
    <label>Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>