src/SupportApp/main/default/objects/Issue_Type__mdt/fields/Menu_Order__c.field-meta.xml
<CustomField>
    <fullName>Menu_Order__c</fullName>
    <label>Menu Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>