src/SupportApp/main/default/objects/Issue_Type__mdt/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <description>The API name of the sObject we have created to capture the Issue details</description>
    <label>SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>